--- a/plugins/modenapaymentgateway/languages/mdn-translations-ru_RU.pot
+++ b/plugins/modenapaymentgateway/languages/mdn-translations-ru_RU.pot
@@ -8,4 +8,4 @@ msgid "chooseParcelTerminalDefaultText"
 msgstr "Список почтовых терминалов"
 
 msgid "mdn-direct-title-text"
-msgstr "Оплатить через интернет банк или кредитной картой"
+msgstr "Интернетбанк или карта"
